Add more copyright headers

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -39,6 +39,12 @@ When the working directory is ~/TypeAgent/python/ta/:
 When generating Python code (e.g. when translating TypeScript to Python),
 please follow these guidelines:
 
+* When creating a new file, add a copyright header to the top:
+```
+# Copyright (c) Microsoft Corporation.
+# Licensed under the MIT License.
+```
+
 * Assume Python 3.12
 
 * Always strip trailing spaces
