[python/knowpro] Make all indexes persistent in SqliteStorageProvider (#1524)
## AI-generated commit message

This branch represents a complete overhaul of the storage layer with
comprehensive
testing infrastructure:

**SQLite Storage Provider (+1500 lines):**
- Implemented full persistent storage for all index types (semantic ref,
property,
  message text, related terms, timestamp indexes)
- Added conversation metadata API with schema versioning
- Implemented message/semantic ref table shredding for normalized
storage
- Added index population and rebuilding capabilities
- Performance optimizations with executemany() and bulk operations

**Test Coverage & Infrastructure:**
- Achieved 94% coverage for reltermsindex.py and 63% for semrefindex.py
- Added unified testing framework supporting both memory and SQLite
providers
- Comprehensive population tests for all index types
- Enhanced type annotations with proper interface types throughout
- Added async clear() methods for interface consistency

**Interface & API Improvements:**
- Made ITimestampIndex methods async for consistency
- Enhanced related terms index with persistent backing
- Fixed interface implementation inconsistencies
- Improved message type handling in storage providers
- Added size() methods and better error handling

**Development & Tooling:**
- Added parallel test execution with pytest-xdist
- Enhanced utool.py with index rebuilding capabilities
- Updated dependencies and improved build system
- Added coverage tracking and analysis tools
- Moved copilot instructions to proper location

**Bug Fixes & Optimizations:**
- Fixed related terms deserialization
- Improved podcast data handling
- Various schema and performance improvements
- Better error handling and type safety throughout

---
## List of commits

In reverse chronological order.

* e4f9893d Add some coverage notes from Claude
* 8885eaff Attempt to increase coverage of semrefindex.py
* 07bd8d4b Upgrade all dependencies
* 217b37a7 Bump related

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -2,7 +2,7 @@
 applyTo: '**/*.py'
 ---
 
-**No praise. Be terse.**
+**DO NOT BE OBSEQUIOUS**
 
 # For Agent mode
 
@@ -38,6 +38,12 @@ When the working directory is ~/TypeAgent/python/ta/:
 
 When generating Python code (e.g. when translating TypeScript to Python),
 please follow these guidelines:
+
+* When creating a new file, add a copyright header to the top:
+```
+# Copyright (c) Microsoft Corporation.
+# Licensed under the MIT License.
+```
 
 * Assume Python 3.12
 
