--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -10,6 +10,10 @@ Use ripgrep (`rg`) for searching.
 
 Never run git commands that many any changes. (`git status` and `git diff` are fine)
 
+**NEVER COMMIT CODE. Do not run `git commit` or any other git commands that make changes to the repository. Not even `git add`**
+
+When moving, copying or deleting files, use the git commands: `git mv`, `git cp`, `git rm`
+
 When the working directory is ~/TypeAgent/python/ta/:
 
 - Don't use '!' on the command line, it's some bash magic (even inside single quotes)
