--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -81,6 +81,13 @@ please follow these guidelines:
   Another exception: pydantic and logfire.
   Final exception: to avoid circular import errors.
 
+* **Import Architecture Rules**:
+  - **Never import a symbol from a module that just re-exports it**
+  - **Always import directly from the module that defines the symbol**
+  - **Exception**: Package `__init__.py` files that explicitly re-export with `__all__`
+  - **Exception**: Explicit re-export patterns like `from ... import X as X` or marked with "# For export"
+  - This prevents circular imports and makes dependencies clear
+
 * Order imports alphabetically after lowercasing; group them as follows
   (with a blank line between groups):
   1. standard library imports
