--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -8,6 +8,8 @@ applyTo: '**/*.py'
 
 Use ripgrep (`rg`) for searching.
 
+**NEVER use TEST_MODEL_NAME or "test" embedding model outside of test files**
+
 Never run git commands that many any changes. (`git status` and `git diff` are fine)
 
 **NEVER COMMIT CODE. Do not run `git commit` or any other git commands that make changes to the repository. Not even `git add`**
