Recreate the embeddings for the message text index (lazily, upon first lookup)

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -96,3 +96,9 @@ please follow these guidelines:
   2. established third-party libraries
   3. experimental third-party libraries (e.g. `typechat`)
   4. local imports (e.g. `from typeagent.knowpro import ...`)
+
+* **Error Handling**: Don't use `try/except Exception` to catch errors broadly.
+  Let errors bubble up naturally for proper error handling and debugging at higher levels.
+
+* **Code Validation**: Don't use `py_compile` for syntax checking.
+  Use `pyright` or `make check` instead for proper type checking and validation.
